# agent_test

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: macos-arm64.yml  macos-x64.yml  windows-x64.yml
apps/agent/: package.json
apps/agent/src/: approvals.ts  auth.test.ts  auth.ts  git.ts  network.ts  security.test.ts  server.ts  sidecar-entry.ts  task-tools.ts  websocket.test.ts  websocket.ts  workspaces.test.ts  workspaces.ts
apps/api/: drizzle.config.ts  package.json
apps/api/drizzle/: 0000_initial.sql
apps/api/src/: config.ts  mailer.ts  schema.ts  security.test.ts  security.ts  server.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  sidecar.rs
apps/web/: middleware.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/app/: admin.css  layout.tsx  page.tsx  styles.css
apps/web/app/api/cloud/[...path]/: route.ts
apps/web/lib/: agent-api.ts  api.ts  conversation.test.ts  conversation.ts  model.test.ts  model.ts
apps/web/tests/e2e/: login.spec.ts
scripts/: build-agent-sidecar.mjs  run-with-env.mjs
