[package]
name = "forge-desktop"
version = "0.1.0"
edition = "2021"
[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
